# signallab

./: .env.example  .gitignore  BUILD_CHECKLIST.md  DEPLOYMENT.md  EMAIL_CONTRACTS_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETLAB_DESKTOP_BRIEF.md  capacitor.config.ts  next.config.js  package-lock.json  package.json  signal-lab-rebuild-FULL-BACKUP-PRE-DESIGN-SYSTEM.bundle  tailwind.config.ts  tsconfig.json  vercel.json  worker-entry.mjs  wrangler.jsonc
.claude/: dev.sh  launch.json
cron-worker/: package-lock.json  package.json  wrangler.jsonc
docs/: scene-detection-evaluation.md
prototypes/: sceneDetect.ts.disabled
public/: artist-voice-v1.html  artist-voice-v2.html  artist-voice-v3.html  broadcast-chain-v1.html  broadcast-v5.html  broadcast-v6.html  chord-lab.html  dashboard-concept-2.html  dashboard-concept.html  design-test.html  invoice-preview.html  logo-preview.html  manifest.json  mockup.html  nm-follower-growth.html  offline.html  signal-genius.html  sonix-preview.html  sw.js
scripts/: check-brain-wired.sh  check-outbound-gated.sh  council-brain-audit.mjs  ferrari-moodboard.mjs  gen-pkpass-asset-module.mjs  gen-pkpass-assets.mjs  gen-splash.sh  generate-sw.mjs  mac-mini-bootstrap.sh  seed-2026-financials.mjs  seed-gig-test-data.mjs  sw.template.js  tauri-build.sh  test-pkpass.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db.rs  essentia.rs  fs.rs  import.rs  mod.rs  tags.rs
src-tauri/src/db/: schema.sql
(+636 files in other folders)
