[package]
name = "setlab-desktop"
version = "0.1.0"
edition = "2021"
description = "Set Lab Desktop — DJ set preparation"

[lib]
name = "setlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
quick-xml = { version = "0.37", features = ["serialize"] }
walkdir = "2"
notify = "7"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "vorbis", "isomp4"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
